# swagger.json
@@ -49,7 +49,23 @@
           "200": {
             "description": "Successfully create new coordinates",
             "schema": {
-              "$ref": "#/definitions/"
+              "$ref": "#/definitions/Geo"
+            }
+          }
+        }
+      }
+    },
+    "/map/delete/all": {
+      "delete": {
+        "summary": "delete all map coordinates",
+        "tags": [
+          "Map"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Geo"
             }
           }
         }
@@ -65,7 +81,7 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/Geo"
             }
           }
         }
@@ -90,7 +106,7 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/"
+              "$ref": "#/definitions/Geo"
             }
           }
         }
@@ -104,7 +120,7 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/"
+              "$ref": "#/definitions/Geo"
             }
           }
         }
@@ -120,6 +136,7 @@
             "name": "id",
             "required": true,
             "in": "path",
+            "type": "string",
             "description": "Update",
             "schema": {
               "properties": {
